Fix wrong filter text color in jupyterlab's dark mode

--- a/js/src/qgrid.css
+++ b/js/src/qgrid.css
@@ -11,6 +11,7 @@
   width: auto;
   height: auto;
   border-radius: 4px;
+  color: #111111;
 }
 
 .q-grid-container .hidden {
